--- a/.github/workflows/oracle-db-backup.yml
+++ b/.github/workflows/oracle-db-backup.yml
@@ -175,7 +175,7 @@ jobs:
               else
                  echo "Overriding command line with supplied JSON inputs"
                  Inputs='${{ github.event.inputs.ParametersJSON }}'
-                 Action=$(echo $Inputs | jq '.BackupAction // "unknown"'')
+                 Action=$(echo $Inputs | jq '.BackupAction // "unknown"')
                  [[ "$Action" == "unknown" ]] && "Action is not specified in JSON inputs"  && exit 6
               fi
               if [[ "$Action" == "oracle-db-backup-success" ]]; then
