--- a/.github/workflows/oracle-db-backup.yml
+++ b/.github/workflows/oracle-db-backup.yml
@@ -124,7 +124,6 @@ jobs:
             # Supply 2 parameters:  TargetEnvironment & TargetHost
             RmanTarget="environment_name_$(echo $1 | sed 's/delius-core-dev/delius_core_development_dev/;s/delius-core-test/delius_core_test_test/;s/delius-core-training/delius_core_test_training/;s/delius-core-stage/delius_core_preproduction_stage/;s/delius-core-pre-prod/delius_core_preproduction_pre_prod/;s/delius-core-prod/delius_core_production_prod/')_$2"
           }
-          BackupStatus=starting
           if [[ "${{ github.event_name }}" != "repository_dispatch" ]] && [[ -z "${{ github.event.inputs.ParametersJSON }}" ]];
           then
               if [[ "${{ github.event_name }}" == "workflow_dispatch" ]]
@@ -161,7 +160,7 @@ jobs:
               Inputs=$Inputs"\"VerboseOutput\": \"$VerboseOutput\","
               Inputs=$Inputs"\"SourceCodeVersion\": \"$SourceCodeVersion\","
               Inputs=$Inputs"\"SourceConfigVersion\": \"$SourceConfigVersion\","
-              Inputs=$Inputs"\"Phase\": \"Starting\""
+              Inputs=$Inputs"\"Phase\": \"Running\""
               Inputs=$Inputs"}"
           else
               # We come here if we have either:
@@ -303,7 +302,9 @@ jobs:
             PHASE=$(echo ${RUNTIME:-{}} | jq -r '.Phase // "Inactive"')
             echo "Backup Phase: $PHASE"
             # Initialize the Backup Status for this RMAN Backup Target
-            [[ ! $PHASE =~ ^Inactive ]] && echo "Backup is already active on this host.  Multiple concurrent runs are not allowed." && exit 1
+            if [[ $PHASE != "Inactive" ]] && [[ $PHASE != "Backup Done" ]]; then
+                echo "Backup is already active on this host.  Multiple concurrent runs are not allowed." && exit 1
+            fi
             aws ssm put-parameter --region ${AWS_REGION} --name "$SSMParameter" --type String --overwrite \
                 --value "$(echo $Inputs | jq -r )" \
                 --description "Runtime phase and status details of RMAN backups running on the $RmanTarget host"
