Set Status during run

--- a/.github/workflows/oracle-db-backup.yml
+++ b/.github/workflows/oracle-db-backup.yml
@@ -212,7 +212,6 @@ jobs:
           echo "BackupError=$BackupError" >> $GITHUB_OUTPUT
           echo "Inputs="$(echo $Inputs | jq @json)
           echo "Inputs="$(echo $Inputs | jq @json) >> $GITHUB_OUTPUT
-          echo "here"
 
       - name: Prepare Slack Channel Name
         id: prepare-slack-channel-name
@@ -301,7 +300,7 @@ jobs:
             PHASE=$(echo ${RUNTIME:-{}} | jq -r '.Phase // "Inactive"')
             echo "Backup Phase: $PHASE"
             # Initialize the Backup Status for this RMAN Backup Target
-            if [[ $PHASE != "Inactive" ]] && [[ $PHASE != "Backup Done" ]]; then
+            if [[ $PHASE != "Inactive" ]] && [[ ! $PHASE =~ Backup ]]; then
                 echo "Backup is already active on this host.  Multiple concurrent runs are not allowed." && exit 1
             fi
             aws ssm put-parameter --region ${AWS_REGION} --name "$SSMParameter" --type String --overwrite \
