--- a/.github/workflows/oracle-db-duplicate.yml
+++ b/.github/workflows/oracle-db-duplicate.yml
@@ -79,128 +79,128 @@ permissions:
   id-token: write
 
 jobs:
-  # oracle-rman-pre-duplicate:
-  #   name: oracle-rman-pre-duplicate
-  #   environment: ${{ github.event.inputs.TargetEnvironment }}-preapproved
-  #   runs-on: ubuntu-latest
-  #   container:
-  #     image: ghcr.io/ministryofjustice/hmpps-delius-operational-automation:0.41.0
-  #   timeout-minutes: 1440
-  #   continue-on-error: false
-  #   outputs:
-  #     DuplicateTarget: ${{ steps.preparation.outputs.DuplicateTarget }}
-  #     SourceOemEnvironment: ${{ steps.preparation.outputs.SourceOemEnvironment }}
-  #     TargetOemEnvironment: ${{ steps.preparation.outputs.TargetOemEnvironment }}
-  #     JobId: ${{ github.job }}
-  #   steps:
+  oracle-rman-pre-duplicate:
+    name: oracle-rman-pre-duplicate
+    environment: ${{ github.event.inputs.TargetEnvironment }}-preapproved
+    runs-on: ubuntu-latest
+    container:
+      image: ghcr.io/ministryofjustice/hmpps-delius-operational-automation:0.41.0
+    timeout-minutes: 1440
+    continue-on-error: false
+    outputs:
+      DuplicateTarget: ${{ steps.preparation.outputs.DuplicateTarget }}
+      SourceOemEnvironment: ${{ steps.preparation.outputs.SourceOemEnvironment }}
+      TargetOemEnvironment: ${{ steps.preparation.outputs.TargetOemEnvironment }}
+      JobId: ${{ github.job }}
+    steps:
 
-  #     - name: Output Input Parameters
-  #       shell: bash
-  #       run: |
-  #         echo -e "TargetEnvironment: ${{ github.event.inputs.TargetEnvironment }}\n\
-  #         TargetHost: ${{ github.event.inputs.TargetHost }}\n\
-  #         SourceLegacy: ${{ github.event.inputs.SourceLegacy }}\n\
-  #         SourceDb: ${{ github.event.inputs.SourceDb }}\n\
-  #         S3SourceBucket: ${{ github.event.inputs.S3SourceBucket }}\n\
-  #         RestoreDatetime: ${{ github.event.inputs.RestoreDatetime }}\n\
-  #         SourceCodeVersion: ${{ github.event.inputs.SourceCodeVersion }}\n\
-  #         SourceConfigVersion: ${{ github.event.inputs.SourceConfigVersion }}"
+      - name: Output Input Parameters
+        shell: bash
+        run: |
+          echo -e "TargetEnvironment: ${{ github.event.inputs.TargetEnvironment }}\n\
+          TargetHost: ${{ github.event.inputs.TargetHost }}\n\
+          SourceLegacy: ${{ github.event.inputs.SourceLegacy }}\n\
+          SourceDb: ${{ github.event.inputs.SourceDb }}\n\
+          S3SourceBucket: ${{ github.event.inputs.S3SourceBucket }}\n\
+          RestoreDatetime: ${{ github.event.inputs.RestoreDatetime }}\n\
+          SourceCodeVersion: ${{ github.event.inputs.SourceCodeVersion }}\n\
+          SourceConfigVersion: ${{ github.event.inputs.SourceConfigVersion }}"
 
-  #     - name: Prepare Duplicate Target Name
-  #       id: preparation
-  #       shell: bash
-  #       run: |
-  #         echo "DuplicateTarget=environment_name_$(echo ${{ github.event.inputs.TargetEnvironment }} | sed 's/delius-core-dev/delius_core_development_dev/;s/delius-core-test/delius_core_test_test/;s/delius-core-training/delius_core_test_training/;s/delius-core-stage/delius_core_preproduction_stage/;s/delius-core-pre-prod/delius_core_preproduction_pre_prod/;s/delius-core-prod/delius_core_production_prod/')_${{ github.event.inputs.TargetHost }}" >> $GITHUB_OUTPUT
+      - name: Prepare Duplicate Target Name
+        id: preparation
+        shell: bash
+        run: |
+          echo "DuplicateTarget=environment_name_$(echo ${{ github.event.inputs.TargetEnvironment }} | sed 's/delius-core-dev/delius_core_development_dev/;s/delius-core-test/delius_core_test_test/;s/delius-core-training/delius_core_test_training/;s/delius-core-stage/delius_core_preproduction_stage/;s/delius-core-pre-prod/delius_core_preproduction_pre_prod/;s/delius-core-prod/delius_core_production_prod/')_${{ github.event.inputs.TargetHost }}" >> $GITHUB_OUTPUT
 
-  #     - name: Check Restore DateTime Input
-  #       if: ${{ github.event.inputs.RestoreDateTime != '' }}
-  #       shell: bash
-  #       run: |
-  #         isDateInvalid()
-  #         {
-  #             DATE="${1}"
+      - name: Check Restore DateTime Input
+        if: ${{ github.event.inputs.RestoreDateTime != '' }}
+        shell: bash
+        run: |
+          isDateInvalid()
+          {
+              DATE="${1}"
 
-  #             # Time format hour[01..23]:min[01..59]:sec[01..59]
-  #             TIMEFORMAT="(([012][0]|[01][1-9]|[2][1-3])-([012345][0-9])-([012345][0-9]))"
+              # Time format hour[01..23]:min[01..59]:sec[01..59]
+              TIMEFORMAT="(([012][0]|[01][1-9]|[2][1-3])-([012345][0-9])-([012345][0-9]))"
 
-  #             # Date format day[01..31], month[01,03,05,07,08,10,12], year[1900..2099]
-  #             DATE_1="((([123][0]|[012][1-9])|3[1])-(0[13578]|1[02])-(19|20)[0-9][0-9])"
+              # Date format day[01..31], month[01,03,05,07,08,10,12], year[1900..2099]
+              DATE_1="((([123][0]|[012][1-9])|3[1])-(0[13578]|1[02])-(19|20)[0-9][0-9])"
 
-  #             # Date format day[01..30], month[04,06,09,11], year[1900..2099]
-  #             DATE_2="(([123][0]|[012][1-9])-(0[469]|11)-(19|20)[0-9][0-9])"
+              # Date format day[01..30], month[04,06,09,11], year[1900..2099]
+              DATE_2="(([123][0]|[012][1-9])-(0[469]|11)-(19|20)[0-9][0-9])"
 
-  #             # Date format day[01..28], month[02], year[1900..2099]
-  #             DATE_3="(([12][0]|[01][1-9]|2[1-8])-02-(19|20)[0-9][0-9])"
+              # Date format day[01..28], month[02], year[1900..2099]
+              DATE_3="(([12][0]|[01][1-9]|2[1-8])-02-(19|20)[0-9][0-9])"
 
-  #             # Date format day[29], month[02], year[1904..2096]
-  #             DATE_4="(29-02-(19|20(0[48]|[2468][048]|[13579][26])))"
+              # Date format day[29], month[02], year[1904..2096]
+              DATE_4="(29-02-(19|20(0[48]|[2468][048]|[13579][26])))"
 
-  #             # Match the date in the Regex
-  #             if [[ "${DATE}" =~ ^((${DATE_1}|${DATE_2}|${DATE_3}|${DATE_4})-${TIMEFORMAT})$ ]]
-  #             then
-  #                 echo "Restore Datetime ${DATE} valid"
-  #             else
-  #                 echo "Restore Datetime ${DATE} invalid!"
-  #             fi
-  #         }
-  #         isDateInvalid '${{ github.event.inputs.RestoreDateTime }}'
+              # Match the date in the Regex
+              if [[ "${DATE}" =~ ^((${DATE_1}|${DATE_2}|${DATE_3}|${DATE_4})-${TIMEFORMAT})$ ]]
+              then
+                  echo "Restore Datetime ${DATE} valid"
+              else
+                  echo "Restore Datetime ${DATE} invalid!"
+              fi
+          }
+          isDateInvalid '${{ github.event.inputs.RestoreDateTime }}'
 
-  #     - name: Checkout hmpps-delius-operation-automation
-  #       uses: actions/checkout@v4
-  #       with:
-  #         sparse-checkout-cone-mode: false
-  #         sparse-checkout: |
-  #           playbooks/oracle_duplicate
-  #           playbooks/delius_users
-  #           playbooks/awr_export
-  #           playbooks/block_sessions
-  #           playbooks/oem_blackout
-  #           common/*
-  #           playbooks/ansible.cfg
-  #         path: operations
-  #         ref: ${{ github.event.inputs.SourceCodeVersion }}
-  #         fetch-depth: 0
+      - name: Checkout hmpps-delius-operation-automation
+        uses: actions/checkout@v4
+        with:
+          sparse-checkout-cone-mode: false
+          sparse-checkout: |
+            playbooks/oracle_duplicate
+            playbooks/delius_users
+            playbooks/awr_export
+            playbooks/block_sessions
+            playbooks/oem_blackout
+            common/*
+            playbooks/ansible.cfg
+          path: operations
+          ref: ${{ github.event.inputs.SourceCodeVersion }}
+          fetch-depth: 0
 
-  #     - name: Checkout modernisation-platform-configuration-management
-  #       uses: actions/checkout@v4
-  #       with:
-  #         repository: ministryofjustice/modernisation-platform-configuration-management
-  #         sparse-checkout-cone-mode: false
-  #         sparse-checkout: |
-  #           ansible/hosts
-  #           ansible/group_vars
-  #         path: inventory
-  #         ref: ${{ github.event.inputs.SourceConfigVersion }}
-  #         fetch-depth: 0
+      - name: Checkout modernisation-platform-configuration-management
+        uses: actions/checkout@v4
+        with:
+          repository: ministryofjustice/modernisation-platform-configuration-management
+          sparse-checkout-cone-mode: false
+          sparse-checkout: |
+            ansible/hosts
+            ansible/group_vars
+          path: inventory
+          ref: ${{ github.event.inputs.SourceConfigVersion }}
+          fetch-depth: 0
 
-  #     - name: Checkout Ansible Required Roles From modernisation-platform-configuration-management
-  #       uses: actions/checkout@v4
-  #       with:
-  #         repository: ministryofjustice/modernisation-platform-configuration-management
-  #         sparse-checkout-cone-mode: false
-  #         sparse-checkout: |
-  #           ansible/roles/secretsmanager-passwords
-  #           ansible/roles/get-modernisation-platform-facts
-  #         path: roles
-  #         ref: ${{ github.event.inputs.SourceConfigVersion }}
-  #         fetch-depth: 0
+      - name: Checkout Ansible Required Roles From modernisation-platform-configuration-management
+        uses: actions/checkout@v4
+        with:
+          repository: ministryofjustice/modernisation-platform-configuration-management
+          sparse-checkout-cone-mode: false
+          sparse-checkout: |
+            ansible/roles/secretsmanager-passwords
+            ansible/roles/get-modernisation-platform-facts
+          path: roles
+          ref: ${{ github.event.inputs.SourceConfigVersion }}
+          fetch-depth: 0
 
-  #     - name: Configure AWS Credentials
-  #       id: login-aws
-  #       uses: aws-actions/configure-aws-credentials@v4
-  #       with:
-  #         role-to-assume: "arn:aws:iam::${{ vars.AWS_ACCOUNT_ID }}:role/modernisation-platform-oidc-cicd"
-  #         role-session-name: "hmpps-delius-operational-automation-${{ github.run_number }}"
-  #         aws-region: "eu-west-2"
+      - name: Configure AWS Credentials
+        id: login-aws
+        uses: aws-actions/configure-aws-credentials@v4
+        with:
+          role-to-assume: "arn:aws:iam::${{ vars.AWS_ACCOUNT_ID }}:role/modernisation-platform-oidc-cicd"
+          role-session-name: "hmpps-delius-operational-automation-${{ github.run_number }}"
+          aws-region: "eu-west-2"
 
-  #     - name: Start Ansible Oracle RMAN Pre Duplicate
-  #       shell: bash
-  #       run: |
-  #         export ANSIBLE_CONFIG=$ansible_config
-  #         ln -s $PWD/roles/ansible/roles $PWD/operations/playbooks/oracle_duplicate/roles
-  #         $ansible_playbook_directory/rman-pre-duplicate.yml -e ansible_aws_ssm_bucket_name=${{ vars.ANSIBLE_AWS_SSM_BUCKET_NAME }} -i $inventory \
-  #         -e duplicate_target=${{ steps.preparation.outputs.DuplicateTarget }} \
-  #         -e skip_audited_interaction_archival=${{ github.event.inputs.SkipAudit }}
+      - name: Start Ansible Oracle RMAN Pre Duplicate
+        shell: bash
+        run: |
+          export ANSIBLE_CONFIG=$ansible_config
+          ln -s $PWD/roles/ansible/roles $PWD/operations/playbooks/oracle_duplicate/roles
+          echo "$ansible_playbook_directory/rman-pre-duplicate.yml -e ansible_aws_ssm_bucket_name=${{ vars.ANSIBLE_AWS_SSM_BUCKET_NAME }} -i $inventory \
+          -e duplicate_target=${{ steps.preparation.outputs.DuplicateTarget }} \
+          -e skip_audited_interaction_archival=${{ github.event.inputs.SkipAudit }}"
 
   oracle-rman-export-schema:
     if: ${{ github.event.inputs.SourceLegacy == 'no' }}
