--- a/.github/workflows/oracle-db-backup.yml
+++ b/.github/workflows/oracle-db-backup.yml
@@ -363,7 +363,7 @@ jobs:
         if: env.BackupStatus == 'success'
         run: |
             Inputs=$(echo $Inputs | jq -r | jq '.Phase = "Done"' | jq @json)
-            aws ssm put-parameter --region ${AWS_REGION} --name "$SSMParameter" --type String --overwrite --value "$Inputs"
+            aws ssm put-parameter --region ${AWS_REGION} --name "$SSMParameter" --type String --overwrite --value "(echo $Inputs | jq -r)"
 
       - name: Slack Failure Notification
         id: slack
