Force archivelog sequence numbers to integers

--- a/playbooks/oracle_backup/validate_chunks.yml
+++ b/playbooks/oracle_backup/validate_chunks.yml
@@ -280,7 +280,9 @@
     # will be pretty rare and its harmless to backup set 2 again anyway)
     - name: Create Range of Archivelogs in Need of Backup
       set_fact:
-        archivelog_range: "{{ archivelogs | min }},{{ archivelogs | max}}"
+        archivelog_min: "{{ archivelogs | min | int }}"
+        archivelog_max: "{{ archivelogs | max | int }}"
+        archivelog_range: "{{ archivelog_min }},{{ archivelog_max }}"
       when: archivelogs is defined
 
     # Ensure that we have found something to backup (in case of RMAN output format changes the match may fail)
@@ -401,7 +403,7 @@
         # available recovery times available)
         - name: Check All Requested Archivelog Sequences for Backup were Available in FRA
           assert:
-            that: (( archivelogs | max ) - ( archivelogs | min )  + 1) == ( rman_log_content | length )
+            that: (( archivelog_max - archivelog_min + 1) == ( rman_log_content | length )
 
       when: archivelog_range |  default([]) | length > 0
 
