--- a/playbooks/oracle_backup/validate_chunks.yml
+++ b/playbooks/oracle_backup/validate_chunks.yml
@@ -421,6 +421,10 @@
     # intact in the RMAN catalog for any subsequent diagnostics.
     - name: Set Corrupt Backupsets Unavailable
       script: run_rman_command.sh {{ database_primary_sid | default(database_standby_sid) }} "change backupset {{ corrupt_backup_sets | join(',') }} unavailable;"
+      environment:
+        ASSUME_ROLE_NAME: "{{ assume_role_name }}"
+        SECRET_ACCOUNT_ID: "{{ secret_account_id }}"
+        SECRET: "{{ secret }}"
 
     - name: Send notification message via Slack that Fix It Job has Run
       community.general.slack:
