--- a/playbooks/oracle_backup/validate_chunks.yml
+++ b/playbooks/oracle_backup/validate_chunks.yml
@@ -422,6 +422,7 @@
     - name: Set Corrupt Backupsets Unavailable
       script: run_rman_command.sh {{ database_primary_sid | default(database_standby_sid) }} "change backupset {{ corrupt_backup_sets | join(',') }} unavailable;"
       environment:
+        CATALOG: "{{ catalog }}"
         ASSUME_ROLE_NAME: "{{ assume_role_name }}"
         SECRET_ACCOUNT_ID: "{{ secret_account_id }}"
         SECRET: "{{ secret }}"
