--- a/.github/workflows/oracle-db-deinstall.yml
+++ b/.github/workflows/oracle-db-deinstall.yml
@@ -1,5 +1,5 @@
-name: "Oracle: OEM Home Target Deletion"
-run-name: "Oracle: ${{ format('{0}_{1}', github.event.inputs.TargetEnvironment, github.event.inputs.TargetHost) }}_oem_agent_setup"
+name: "Oracle: Deinstall Oracle Software"
+run-name: "Oracle: ${{ format('{0}-{1}', github.event.inputs.TargetEnvironment, github.event.inputs.TargetHost) }}-deinstall-oracle-software"
 on:
   workflow_dispatch:
     inputs:
@@ -32,16 +32,6 @@ on:
           - "misdsd_primarydb",
           - "misdsd_standbydb1",
           - "misdsd_dbs"
-       Environment:
-        description: Environment"
-        type: choice
-        options:
-          - "delius-core-dev"
-          - "delius-core-test"
-          - "delius-core-training"
-          - "delius-core-stage"
-          - "delius-core-pre-prod"
-          - "delius-core-prod"
       GridHome:
         description: "Oracle Grid Infrastructure Home to Deinstall"
         type: choice
@@ -76,6 +66,8 @@ on:
 
 env:
   ansible_config: ansible/playbooks/ansible.cfg
+  command: ansible-playbook operations/playbooks/oracle_release_update/deinstall_oracle.yml
+  inventory: inventory/ansible
 
 permissions:
   contents: read
@@ -90,17 +82,20 @@ jobs:
     container:
       image: ghcr.io/ministryofjustice/hmpps-delius-operational-automation:0.41.0
     timeout-minutes: 1440
-    env:
-      command: ansible-playbook operations/playbooks/oracle_release_update/deinstall_oracle.yml
-      inventory: inventory/ansible
     continue-on-error: false
     steps:
 
       - name: Prepare Target Name
         id: preparetargetname
         run: |
-          for 
-          echo TargetHosts="environment_name_$(echo ${{ github.event.inputs.TargetEnvironment }} | sed 's/delius-core-dev/delius_core_development_dev/;s/delius-core-test/delius_core_test_test/;s/delius-core-training/delius_core_test_training/;s/delius-core-stage/delius_core_preproduction_stage/;s/delius-core-pre-prod/delius_core_preproduction_pre_prod/;s/delius-core-prod/delius_core_production_prod/')_${{ github.event.inputs.TargetHost }}" >> $GITHUB_OUTPUT
+          environment_name_$(echo ${{ github.event.inputs.TargetEnvironment }} | sed 's/delius-core-dev/delius_core_development_dev/;s/delius-core-test/delius_core_test_test/;s/delius-core-training/delius_core_test_training/;s/delius-core-stage/delius_core_preproduction_stage/;s/delius-core-pre-prod/delius_core_preproduction_pre_prod/;s/delius-core-prod/delius_core_production_prod/')
+          IFS=","
+          for target in ${{ github.event.inputs.TargetHost }}
+          do
+            IFS=""
+            TargetHost+=${environment_name}_${target},
+          done
+          echo "TargetHost=${TargetHost}" >> $GITHUB_OUTPUT
 
       - name: Checkout From hmpps-delius-operational-automation
         uses: actions/checkout@v4
@@ -138,7 +133,6 @@ jobs:
         run: | 
             export ANSIBLE_CONFIG=$ansible_config
             $command -i $inventory -e ansible_aws_ssm_bucket_name=${{ vars.ANSIBLE_AWS_SSM_BUCKET_NAME }} \
-            -e target_hosts="${{ github.event.inputs.TargetHosts }}" \
+            -e target_hosts="${{ steps.preparetargetname.outputs.TargetHost }}" \
             -e oracle_grid_oracle_home="{{ github.event.inputs.GridHome }}" \
-            -e oracle_database_oracle_home="{{ github.event.inputs.DatabaseHome }}" \
-            -e target=${{ steps.build_target_name.outputs.TargetHosts }} ${{ github.event.inputs.VerboseOutput }}
+            -e oracle_database_oracle_home="{{ github.event.inputs.DatabaseHome }} ${{ github.event.inputs.VerboseOutput }}
