--- a/.github/workflows/oracle-db-deinstall.yml
+++ b/.github/workflows/oracle-db-deinstall.yml
@@ -35,16 +35,16 @@ on:
       GridHome:
         description: "Oracle Grid Infrastructure Home to Deinstall"
         type: choice
-        default: "NONE"
+        default: "DO_NOT_DEINSTALL"
         options: 
-          - "NONE"
+          - "DO_NOT_DEINSTALL"
           - "/u01/app/grid/product/19.0.0.0/grid"
       DatabaseHome:
         description: "Oracle Database Home to Deinstall"
         type: choice
-        default: "NONE"
+        default: "DO_NOT_DEINSTALL"
         options
-          - "NONE"
+          - "DO_NOT_DEINSTALL"
           - "/u01/app/oracle/product/19.0.0.0/db"
       VerboseOutput:
         description: "Verbose Output level"
