--- a/.github/workflows/oracle-db-delete-dbids-not-in-use.yml
+++ b/.github/workflows/oracle-db-delete-dbids-not-in-use.yml
@@ -14,6 +14,15 @@ on:
           - "delius-core-stage"
           - "delius-core-pre-prod"
           - "delius-core-prod"
+      TargetHost:
+        description: "Backup target host"
+        required: true
+        type: choice
+        options: 
+          - "delius_primarydb"
+          - "mis_primarydb"
+          - "misboe_primarydb"
+          - "misdsd_primarydb"
       VerboseOutput: 
         description: "Verbose Output level"
         type: choice
@@ -55,14 +64,12 @@ jobs:
           then
               if [[ "${{ github.event_name }}" == "workflow_dispatch" ]]
               then
-                TargetHost="${{ github.event.inputs.TargetHost }}"
                 TargetEnvironment="${{ github.event.inputs.TargetEnvironment }}"
                 VerboseOutput="${{ github.event.inputs.VerboseOutput }}"
                 SourceCodeVersion="${{ github.event.inputs.SourceCodeVersion }}"
                 SourceConfigVersion="${{ github.event.inputs.SourceConfigVersion }}"
               elif [[ "${{ github.event_name }}" == "schedule" ]]
               then
-                TargetHost="${{ inputs.TargetHost }}"
                 TargetEnvironment="${{ inputs.TargetEnvironment }}"
               fi
               RmanTarget="environment_name_$(echo $TargetEnvironment | sed 's/delius-core-dev/delius_core_development_dev/;s/delius-core-test/delius_core_test_test/;s/delius-core-training/delius_core_test_training/;s/delius-core-stage/delius_core_preproduction_stage/;s/delius-core-pre-prod/delius_core_preproduction_pre_prod/;s/delius-core-prod/delius_core_production_prod/')_$TargetHost"
