--- a/.github/workflows/oracle-db-delete-dbids-not-in-use.yml
+++ b/.github/workflows/oracle-db-delete-dbids-not-in-use.yml
@@ -63,12 +63,14 @@ jobs:
             if [[ "${{ github.event_name }}" == "workflow_dispatch" ]]
             then
               TargetEnvironment="${{ github.event.inputs.TargetEnvironment }}"
+              TargetHost="${{ github.event.inputs.TargetHost }}"
               VerboseOutput="${{ github.event.inputs.VerboseOutput }}"
               SourceCodeVersion="${{ github.event.inputs.SourceCodeVersion }}"
               SourceConfigVersion="${{ github.event.inputs.SourceConfigVersion }}"
             elif [[ "${{ github.event_name }}" == "schedule" ]]
             then
               TargetEnvironment="${{ inputs.TargetEnvironment }}"
+              TargetHost="${{ inputs.TargetHost }}"
             fi
             RmanTarget="environment_name_$(echo $TargetEnvironment | sed 's/delius-core-dev/delius_core_development_dev/;s/delius-core-test/delius_core_test_test/;s/delius-core-training/delius_core_test_training/;s/delius-core-stage/delius_core_preproduction_stage/;s/delius-core-pre-prod/delius_core_preproduction_pre_prod/;s/delius-core-prod/delius_core_production_prod/')_$TargetHost"
 
